# evci_tool

./: 00_config.ipynb  01_model.ipynb  02_maps.ipynb  03_analysis.ipynb  README.md  _quarto.yml  evci_config.py  evci_model.py  evci_tool.py  example.py  example_00.py  example_01.py  example_02.py  example_03.py  example_04.py  example_all.py  index.ipynb  mpen_evci.py  pyproject.toml
evci_tool/: _modidx.py  analysis.py  config.py  model.py
examples/: example_00.py  example_01.py  example_02.py  example_03.py  example_04.py  example_all.py
input/goa/: Master sheet_EVCI Locations_29Sep21_Final.xlsx
input/goa/Goa/: Goa.dbf  Goa.shp  Goa.shx
input/pcmc/: PCMC Mastersheet_3Nov21.xlsx
input/pcmc/PCMC_Wards/: PCMC_Wards.dbf  PCMC_Wards.sbn  PCMC_Wards.sbx  PCMC_Wards.shp  PCMC_Wards.shp.xml  PCMC_Wards.shx
input/pmc/: Pune site mastersheet_3Nov21.xlsx
input/pmc/PMC/: PMC.dbf  PMC.sbn  PMC.sbx  PMC.shp  PMC.shx
input/pmc/pune-admin-wards/: pune-admin-wards.dbf  pune-admin-wards.sbn  pune-admin-wards.sbx
output/pmc/: README
