[tool.poetry]
name = "evci-web"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.2"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
Shapely = "^1.8.1"
streamlit = "^1.6.0"
scipy = "^1.8.0"
openpyxl = "^3.0.9"
Fiona = "^1.8.21"
Rtree = "^0.9.7"
geopandas = "^0.10.2"
cryptography = "^36.0.1"
PyJWT = {extras = ["crypto"], version = "^2.3.0"}
Flask = "^2.0.3"
extra-streamlit-components = "^0.1.53"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
